# ocr-perfomance-test

./: .gitignore  pyproject.toml  results.json
side_project/: commands.py  config.py  main.py  settings.py  utils.py
side_project/commands/: __init__.py  config.py  info.py  test.py  version.py
side_project/lib/: __init__.py  settings.py
side_project/models/: __init__.py  easyocr.py  paddleocr.py  pytesseract.py
tools/: install.sh
