[project]
name = "side-project"
version = "0.1.0"
description = "A powerful command-line tool"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "easyocr>=1.7.2",
    "paddleocr>=3.2.0",
    "paddlepaddle>=3.2.0",
    "pyinstaller>=6.15.0",
    "pytesseract>=0.3.13",
    "rich>=14.1.0",
    "typer>=0.17.4",
    "watchfiles>=1.1.0",
]

[project.scripts]
side-project = "side_project.main:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
